--- a/ProjectAPI/ProjectAPI.csproj
+++ b/ProjectAPI/ProjectAPI.csproj
@@ -24,4 +24,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Textfile\DemoLoggMedFirstLast.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
