--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -1,18 +1,25 @@
-# syntax=docker/dockerfile:1
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
+#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
+#For more information, please see https://aka.ms/containercompat
+
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
+EXPOSE 80
+EXPOSE 443
 
-# Copy csproj and restore as distinct layers
-COPY ./ ./
-RUN dotnet restore ProjectAPI.sln
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+WORKDIR /src
+COPY ["ProjectAPI/ProjectAPI.csproj", "ProjectAPI/"]
+RUN dotnet restore "ProjectAPI/ProjectAPI.csproj"
+COPY . .
+WORKDIR "/src/ProjectAPI"
+RUN dotnet build "ProjectAPI.csproj" -c Release -o /app/build
 
-# Copy everything else and build
-RUN dotnet publish -c Release -o out
+FROM build AS publish
+RUN dotnet publish "ProjectAPI.csproj" -c Release -o /app/publish
 
-# Run tests
-# RUN dotnet test
-
-# Build runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:6.0
+FROM base AS final
 WORKDIR /app
-COPY --from=build-env /app/out .ENTRYPOINT ["dotnet", ProjectAPI.dll"]
+COPY --from=publish /app/publish .
+ENTRYPOINT ["dotnet", "ProjectAPI.dll"]
